got simple user creation working

--- a/Resources/Views/login.html
+++ b/Resources/Views/login.html
@@ -5,9 +5,12 @@
     <script>
     $(document).ready(function(){
       $('#userPassForm').submit(function(){
-        $.post('/auth', function() {
-          window.location = '/';
-        });
+        $.post(
+          '/auth',
+          $('#userPassForm').serializeArray(),
+          function() {
+            window.location = '/';
+          });
         return false;
       });
     });
