--- a/Resources/Views/login.html
+++ b/Resources/Views/login.html
@@ -5,26 +5,33 @@
     <script>
     $(document).ready(function(){
       $('#userPassForm').submit(function(){
-        $.post(
-          '/auth',
-          $('#userPassForm').serializeArray(),
-          function() {
+        $.post('/auth', $('#userPassForm').serializeArray())
+        .done(function() {
             window.location = '/';
-          });
+        })
+        .fail(function() {
+            alert('Incorrect or invalid username or password. Please try again!');
+        });
         return false;
+      });
+      $('#signUpButton').click(function(){
+        window.location = '/signup';
       });
     });
     </script>
 </head>
     <body>
+        <h1>Existing User Login</h1>
         <form id="userPassForm">
-      Username:<br>
-      <input type="text" name="username">
+          Username:<br>
+          <input type="text" name="username">
+          <br>
+          Password:<br>
+          <input type="password" name="password">
+          <br><br>
+          <input type="submit" value="Submit">
+      </form>
       <br>
-      Password:<br>
-      <input type="password" name="password">
-      <br><br>
-      <input type="submit" value="Submit">
-  </form>
+      <button type="button" id="signUpButton">New User</button>
     </body>
 </html>
