--- a/Resources/Views/login.html
+++ b/Resources/Views/login.html
@@ -22,6 +22,7 @@
 </head>
     <body>
         <h1>Existing User Login</h1>
+        <a href="website">SHP Course Website</a><br><br>
         <form id="userPassForm">
           Username:<br>
           <input type="text" name="username">
