--- a/Resources/Views/login.html
+++ b/Resources/Views/login.html
@@ -10,7 +10,7 @@
             window.location = '/';
         })
         .fail(function() {
-            alert('Incorrect or invalid username or password. Please try again!');
+            $('#failure').show();
         });
         return false;
       });
@@ -29,6 +29,7 @@
           <br>
           Password:<br>
           <input type="password" name="password">
+          <p style="color:red" id="failure" hidden> Login Failed. Please try again.</p>
           <br><br>
           <input type="submit" value="Submit">
       </form>
